--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
+    <title>kibo</title>
     <link rel="stylesheet" href="files/index.css">
     <link rel="icon" href="files/icon.png">
   </head>
   <body>
+    <div class="middle"><h1>kibo</h1></div>
   </body>
