--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
   <head>
     <title>kibo</title>
     <link rel="stylesheet" href="files/index.css">
-    <link rel="icon" href="files/icon.png">
+    <link rel="icon" href="https://cdn.discordapp.com/emojis/779081117944119336.png?v=1">
   </head>
   <body>
-    <div class="middle"><h1>kibo</h1></div>
+    <script src="files/index.js"></script>
+    <div class="middle"><h1>"kibo" is our thing now, i guess</h1><br></div>
+    <div class="middle2"><h2>[ <a href="about/">about</a> | <a href="projects/">projects</a> | <a href="https://github.com/hyuata">github</a> | <a href="contact/">contact</a> ]</h2></div>
   </body>
