--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,5 @@
     <link rel="icon" href="https://cdn.discordapp.com/emojis/779081117944119336.png?v=1">
   </head>
   <body>
-    <div class="middle"><h1>"kibo" is our thing now, i guess</h1><br></div>
-    <div class="middle2"><h2>[ <a href="about/">about</a> | <a href="projects/">projects</a> | <a href="https://github.com/hyuata">github</a> | <a href="contact/">contact</a> ]</h2></div>
+    <div class="middle3"><h1>about us</h1><br></div>
   </body>
