--- a/about/index.html
+++ b/about/index.html
@@ -6,4 +6,5 @@
   </head>
   <body>
     <div class="middle3"><h1>about us</h1><br></div>
+    <img src="images/bert.png"></img> <img src="images/alfie.png"></img> <img src="images/cmyui.png"></img> <img src="images/cover.png"></img>
   </body>
