--- a/about/index.html
+++ b/about/index.html
@@ -6,5 +6,5 @@
   </head>
   <body>
     <div class="middle3"><h1>about us</h1><br></div>
-    <img src="images/bert.png" class="pfp"></img> <img src="images/alfie.jpg" class="pfp"></img> <img src="images/cmyui.png" class="pfp"></img> <img src="images/cover.jpg" class="pfp"></img>
+    <div class="aboutimg"><img src="images/bert.png" class="pfp"></img></div> <div class="abouttext"></div> <br><br><br><br><br><br><br><br><div class="aboutimg"><img src="images/alfie.jpg" class="pfp"></img></div> <div class="abouttext"></div> <br><br><br><br><br><br><br><br><div class="aboutimg"><img src="images/cmyui.png" class="pfp"></img></div> <div class="abouttext"></div> <br><br><br><br><br><br><br><br><div class="aboutimg"><img src="images/cover.jpg" class="pfp"></img></div> <div class="abouttext"></div>
   </body>
