--- a/about/index.html
+++ b/about/index.html
@@ -6,5 +6,17 @@
   </head>
   <body>
     <div class="middle3"><h1>about us</h1><br></div>
-    <div class="aboutimg"><img src="images/bert.png" class="pfp"></img></div> <div class="abouttext"></div> <br><br><br><br><br><br><br><br><div class="aboutimg"><img src="images/alfie.jpg" class="pfp"></img></div> <div class="abouttext"></div> <br><br><br><br><br><br><br><br><div class="aboutimg"><img src="images/cmyui.png" class="pfp"></img></div> <div class="abouttext"></div> <br><br><br><br><br><br><br><br><div class="aboutimg"><img src="images/cover.jpg" class="pfp"></img></div> <div class="abouttext"></div>
+    <a href="http://github.com/heyimbert"><div class="aboutimg"><img src="images/bert.png" class="pfp"></img></div> 
+    <div class="abouttext"></div></a> 
+    <br><br><br><br><br><br><br><br>
+    <a href="http://github.com/kuranoia"><div class="aboutimg">
+    <img src="images/alfie.jpg" class="pfp"></img></div> 
+    <div class="abouttext"></div></a> 
+    <br><br><br><br><br><br><br><br>
+    <a href="http://github.com/cmyui"><div class="aboutimg">
+    <img src="images/cmyui.png" class="pfp"></img></div> 
+    <div class="abouttext"></div> 
+    <br><br><br><br><br><br><br><br>
+    <a href="http://github.com/coverosu"><div class="aboutimg"><img src="images/cover.jpg" class="pfp"></img></div> 
+    <div class="abouttext"></div></a>
   </body>
