--- a/about/index.html
+++ b/about/index.html
@@ -6,8 +6,13 @@
   </head>
   <body>
     <div class="middle3"><h1>about us</h1><br></div>
-    <a href="http://github.com/heyimbert"><div class="aboutimg"><img src="images/bert.png" class="pfp"></img></div> 
-    <div class="abouttext"></div></a> 
+    <a href="http://github.com/heyimbert"><div class="aboutimg"><img src="images/bert.png" class="pfp"></img></div></a>  
+    <div class="abouttext">
+      Hello, my name is Matt A.K.A Bert. I'm 21 years old and I'm from the USA. I started learning to code in early 2020
+      just as the pandemic started. I originally started off making Discord bots out of Python, but as I dug deeper into the coding rabbit hole,
+      I started to become more versatile. I began messing around with Unity, and learning C#, I want to use these skills to eventually make my own
+      video game, perhaps even pick up an internship as a Junior Game Developer.
+    </div>
     <br><br><br><br><br><br><br><br>
     <a href="http://github.com/kuranoia"><div class="aboutimg">
     <img src="images/alfie.jpg" class="pfp"></img></div> 
