--- a/about/index.html
+++ b/about/index.html
@@ -1,30 +1,13 @@
-<h
-   tml>
-  <hea
-       d>
-    <title>kibo 
-      | about us</title>
+<html>
+  <head>
+    <title>kibo | about us</title>
     <link rel="stylesheet" href="about.css">
     <link rel="icon" href="https://cdn.discordapp.com/emojis/779081117944119336.png?v=1">
-  </he
-    
-    ad>
-  <bo
-      dy>
+  </head>
+  <body>
     <div class="middle3"><h1>about us</h1><br></div>
-    <div class="aboutimg"><img src="images/bert.png" class="pfp"></img>
-    </div> 
-  <div class="abouttext">Hello, my name is Matt A.K.A Bert. I'm 21 years old and I'm from the USA. I started learning to code in early 2020 just as the pandemic started. I originally started off making Discord bots out of Python, but as I dug deeper into the coding rabbit hole, I started to become more versatile. I began messing around with Unity, and learning C#, I want to use these skills to eventually make my own video game, perhaps even pick up an internship as a Junior Game Developer.</div>
-    <br><b
-           r><br
-                ><br><br>
-  <br><br><b
-             r><div class="aboutimg"><img src="images/alfie.jpg" class="pfp"></img></div> 
-  <div class="abouttext">Hey, my name's Alfie! I'm 15 years old and from the United Kingdom. I first started programming when I was only 6, and have been expanding my coding knowledge ever since. I started off with mainly frontend and HTML work, but I've recently gotten more into backend, like PHP, JavaScript, Python and much more. It's always fun to meet people who have similar interests, and I'm always down to learn new things, so if you have any suggestions or tips, send them my way!</div>
-    <br><br><br
-                ><br><br>
-<br><b
-                               r><br><div class="aboutimg"><img src="images/cmyui.png" class="pfp"></img></div> <div class="abouttext">that's josh smith aka big man cmyui but we don't talk about him</div>
-    <br><br><br><br><br><br><br><br
-                                    ><div class="aboutimg"><img src="images/cover.jpg" class="pfp"></img></div> <div class="abouttext">very tall big man cover</div>
+    <div class="aboutimg"><img src="images/bert.png" class="pfp"></img></div> <div class="abouttext">Hello, my name is Matt A.K.A Bert. I'm 21 years old and I'm from the USA. I started learning to code in early 2020 just as the pandemic started. I originally started off making Discord bots out of Python, but as I dug deeper into the coding rabbit hole, I started to become more versatile. I began messing around with Unity, and learning C#, I want to use these skills to eventually make my own video game, perhaps even pick up an internship as a Junior Game Developer.</div>
+    <br><br><br><br><br><br><br><br><div class="aboutimg"><img src="images/alfie.jpg" class="pfp"></img></div> <div class="abouttext">Hey, my name's Alfie! I'm 15 years old and from the United Kingdom. I first started programming when I was only 6, and have been expanding my coding knowledge ever since. I started off with mainly frontend and HTML work, but I've recently gotten more into backend, like PHP, JavaScript, Python and much more. It's always fun to meet people who have similar interests, and I'm always down to learn new things, so if you have any suggestions or tips, send them my way!</div>
+    <br><br><br><br><br><br><br><br><div class="aboutimg"><img src="images/cmyui.png" class="pfp"></img></div> <div class="abouttext">that's josh smith aka big man cmyui but we don't talk about him</div>
+    <br><br><br><br><br><br><br><br><div class="aboutimg"><img src="images/cover.jpg" class="pfp"></img></div> <div class="abouttext">very tall big man cover</div>
   </body>
