--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <title>kibo</title>
     <link rel="stylesheet" href="files/index.css">
     <link rel="icon" href="https://cdn.discordapp.com/emojis/779081117944119336.png?v=1">
+    <script src="files/time.js"></script>
   </head>
   <body onload="startTime()">
-    <script src="files/index.js"></script>
     <div id="time"></div>
     <div class="middle"><h1>"kibo" is our thing now, i guess</h1><br></div>
     <div class="middle2"><h2>[ <a href="about/">about</a> | <a href="projects/">projects</a> | <a href="https://github.com/hyuata">github</a> | <a href="contact/">contact</a> ]</h2></div>
