--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="files/time.js"></script>
   </head>
   <body onload="startTime()">
-    <div class="middle"><h1>"kibo" is our thing now, i guess</h1><br></div>
+    <div class="middle"><h1><span>"kibo" is our thing now, i guess</span></h1><br></div>
     <div class="middle2"><h2>[ <a href="about/">about</a> | <a href="projects/">projects</a> | <a href="https://github.com/hyuata">github</a> | <a href="contact/">contact</a> ]</h2></div>
     <div id="time"></div>
   </body>
